# pico-library-boilerplate

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/your_library/: CMakeLists.txt
lib/your_library/include/: your_library.hpp
lib/your_library/src/: your_library.cpp
src/: main.cpp
